// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks author 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (:heart: Adam Dierkens/adam@dierkens.com :heart:)

#### Authors: 1

:shipit: Adam Dierkens (:heart: Adam Dierkens/adam@dierkens.com :heart:)"
`;

exports[`Hooks title 1`] = `
":heart: 🐛  Bug Fix :heart:
- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should combine pr w/no label and labelled pr 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)
- Third  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for JIRA commits 1`] = `
"#### 💥  Breaking Change

- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Some Feature [#12345](https://github.custom.com/foobar/auto-release/pull/12345) (adam@dierkens.com)

#### 🐛  Bug Fix

- Third  (adam@dierkens.com)

#### 🏠  Internal

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for PR commits without labels 1`] = `
"#### 🐛  Bug Fix

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should create note for jira commits without labels 1`] = `
"#### 🐛  Bug Fix

- [PLAYA-5052](https://jira.custom.com/browse/PLAYA-5052): Fix P0  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should omit authors with invalid email addresses 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234)"
`;

exports[`generateReleaseNotes should include PR-less commits as patches 1`] = `
"#### 🚀  Enhancement

- First Feature [#1235](https://github.custom.com/foobar/auto-release/pull/1235) (adam@dierkens.com)

#### 🐛  Bug Fix

- I should be included  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`generateReleaseNotes should use only email if author name doesn't exist 1`] = `
"#### 🐛  Bug Fix

- Another Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) (adam@dierkens.com)
- One Feature [#1235](https://github.custom.com/foobar/auto-release/pull/1235)

#### Authors: 1

- adam@dierkens.com"
`;

exports[`generateReleaseNotes should use username if present 1`] = `
"#### 🚀  Enhancement

- Some Feature [#1234](https://github.custom.com/foobar/auto-release/pull/1234) ([@adam](https://github.custom.com/adam))

#### Authors: 1

- Adam Dierkens ([@adam](https://github.custom.com/adam))"
`;

exports[`normalizeCommits should do nothing with normal commits 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "subject": "First",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "subject": "Second",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "subject": "Third",
  },
]
`;
